--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/.gitignore
+.idea/modules.xml
+.idea/play-what.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
